tests/baselines/reference/stringLiteralTypesOverloadAssignability01.errors.txt
stringLiteralTypesOverloadAssignability01.ts(14,1): error TS2322: Type '(x: "bar") => number' is not assignable to type '(x: "foo") => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '"foo"' is not assignable to type '"bar"'.
stringLiteralTypesOverloadAssignability01.ts(15,1): error TS2322: Type '(x: "foo") => number' is not assignable to type '(x: "bar") => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '"bar"' is not assignable to type '"foo"'.


==== stringLiteralTypesOverloadAssignability01.ts (2 errors) ====
    function f(x: "foo"): number;
    function f(x: string): number {
        return 0;
    }
    
    function g(x: "bar"): number;
    function g(x: string): number {
        return 0;
    }
    
    let a = f;
    let b = g;
    
    a = b;
    ~
!!! error TS2322: Type '(x: "bar") => number' is not assignable to type '(x: "foo") => number'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '"foo"' is not assignable to type '"bar"'.
    b = a;
    ~
!!! error TS2322: Type '(x: "foo") => number' is not assignable to type '(x: "bar") => number'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '"bar"' is not assignable to type '"foo"'.